--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -1,14 +1,17 @@
 .form {
   margin: 10px;
-  border: 1px solid rgb(204, 79, 79);
+  /* border: 1px solid rgb(204, 79, 79); */
   min-width: 40%;
-  background-color: #b97deb;
+  /* background-color: #cabfae; */
   border-radius: 5px;
+  box-shadow: 0px 0px 10px black;
+  padding: 10px;
 }
 
 .form h1 {
+  text-align: center;
   border-radius: 4px;
-  background-color: #9246c5;
+  background-color: #686851;
   display: block;
   color: black;
   font-weight: bold;
@@ -22,7 +25,7 @@
   background-color: #f1e1fc;
   color: #38015c;
   border-radius: 4px;
-  border: 1px solid rgb(204, 79, 79);
+  border: 1px solid rgb(231, 229, 229);
   width: fit-content;
   text-align: left;
   padding: 0.25rem;
@@ -44,4 +47,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.select {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.select select {
+  display: flex;
+  font: inherit;
+  background-color: #f1e1fc;
+  color: #38015c;
+  border-radius: 4px;
+  border: 1px solid rgb(204, 79, 79);
+  width: 100%;
+  text-align: left;
+  padding: 0.25rem;
+  margin: 5px;
+}
+.select label {
+  display: block;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  margin: 5px;
 }
