--- a/src/components/reviews/ReviewCard.module.css
+++ b/src/components/reviews/ReviewCard.module.css
@@ -1,8 +1,25 @@
 .card {
   /* text-decoration: none; */
+  /* width: 200;
+  height: 200; */
   background-color: beige;
-  transition: ease-out;
+  /* transition: width 2s, height 4s; */
+  /* animation: 1s ease-in-out 0s 1 slideInFromLeft; */
 }
-.reviews {
-  transition: ease-in;
-}
+/* .reviews {
+  /* transition: all 300ms ease-in-out; */
+/* } */
+/* 
+.card:hover {
+  width: 700px;
+  height: 500px;
+} */
+
+/* @keyframes slideInFromLeft {
+  0% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(0);
+  } */
+/* } */
