--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,7 +1,8 @@
 .x {
   display: flex;
-  width: 100%;
-  height: 1000px;
+  width: 100vw;
+  height: 100vh;
+
   /* background-color: red; */
 }
 .side1 {
@@ -12,8 +13,19 @@
 }
 .side1 ul {
   position: -webkit-sticky;
+  display: block;
   position: sticky;
   top: 110px;
+  list-style-type: none;
+  text-decoration: none;
+}
+.side1 li a {
+  display: block;
+  background-color: white;
+  margin-top: 5px;
+  padding: 5px;
+  list-style-type: none;
+  text-decoration: none;
 }
 .side2 {
   /* background-color: rgb(21, 255, 0); */
@@ -21,6 +33,7 @@
   width: 60%;
   margin: 10px;
   padding: 10px;
+  height: fit-content;
 }
 .side3 {
   /* background-color: rgb(255, 238, 0); */
