--- a/src/components/reviews/Review.module.css
+++ b/src/components/reviews/Review.module.css
@@ -8,3 +8,10 @@
 .reviews {
   transition: all 300ms ease-in-out;
 }
+
+.reviewlist {
+  display: flexbox;
+  height: 90vh;
+  width: 90vw;
+  overflow: scroll;
+}
