--- a/src/components/worker/Worker.module.css
+++ b/src/components/worker/Worker.module.css
@@ -2,3 +2,9 @@
   text-decoration: none;
   color: black;
 }
+.workerlist {
+  display: flexbox;
+  height: 90vh;
+  width: 90vw;
+  overflow: scroll;
+}
