--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .x {
-  display: flex;
-  position: fixed;
+  /* display: flexbox; */
+  /* position: fixed; */
   /* top: 20vh; */
   width: 100vw;
   height: 90vh;
@@ -9,34 +9,49 @@
   /* background-color: red; */
 }
 .side1 {
-  background-color: rgb(223, 222, 211);
-  width: 15%;
-  height: 100%;
+  background-color: #c2c2c2;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+
+  color: white;
+  position: sticky;
+  top: 10vh;
+  z-index: 1;
+  height: fit-content;
+  /* width: 15%; */
   /* float: left; */
 }
-.side1 ul {
+.link {
+  font-size: 3vh;
+  text-decoration: none;
+  color: white;
+  background-color: rgb(192, 212, 228);
+  /* font-size: calc(9px + 1vmin); */
+}
+/* .side1 ul {
   position: -webkit-sticky;
   display: block;
-  position: sticky;
-  top: 110px;
-  list-style-type: none;
-  text-decoration: none;
-}
-.side1 li a {
+  /* position: sticky;
+  top: 110px; */
+/* list-style-type: none;
+  text-decoration: none; */
+/* } */
+/* .side1 li a {
   display: block;
   background-color: white;
   margin-top: 5px;
   padding: 5px;
   list-style-type: none;
   text-decoration: none;
-}
+} */
 .side2 {
   /* background-color: rgb(21, 255, 0); */
   /* float: left; */
-  width: 85%;
-  height: 100%;
+  /* width: 85%;
+  height: 100%; */
   margin: 10px;
   padding: 10px;
   height: fit-content;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
