--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -24,7 +24,7 @@
   margin: 0 1rem;
 }
 
-.header button {
+/* .header button {
   font: inherit;
   background-color: transparent;
   border: 1px solid white;
@@ -33,9 +33,12 @@
   padding: 0.5rem 1.5rem;
   border-radius: 6px;
   cursor: pointer;
-}
+} */
 
 .header button:hover {
   background-color: #c291e2;
   color: #38015c;
+}
+.nav-link {
+  color: white;
 }
