--- a/src/components/chats/Chat.module.css
+++ b/src/components/chats/Chat.module.css
@@ -1,7 +1,7 @@
 .x {
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 90vh;
   background-color: rgb(226, 233, 238);
   /* overflow: hidden; */
 }
