--- a/src/components/worker/Worker.module.css
+++ b/src/components/worker/Worker.module.css
@@ -13,3 +13,14 @@
   display: flex;
   align-items: baseline;
 }
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a button {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
