--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -4,6 +4,7 @@
   /* top: 20vh; */
   width: 100vw;
   height: 90vh;
+  /* overflow: hidden; */
   /* overflow: scroll; */
 
   /* background-color: red; */
@@ -18,7 +19,7 @@
   position: sticky;
   top: 10vh;
   z-index: 1;
-  height: fit-content;
+  /* height: fit-content; */
   /* width: 15%; */
   /* float: left; */
 }
@@ -46,6 +47,6 @@
   height: 100%; */
   margin: 10px;
   padding: 10px;
-  height: fit-content;
+  /* height: fit-content; */
   /* overflow: scroll; */
 }
