--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -1,7 +1,7 @@
 .header {
   background-color: #282c34;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   /* min-height: 50px; */
   font-size: calc(9px + 1vmin);
@@ -21,16 +21,23 @@
 }
 
 .header li {
-  margin: 0 1rem;
+  padding: 1rem;
+}
+.header li:hover {
+  background-color: #353a44;
+  border: 1px solid white;
+  border-radius: 5px;
 }
 
 .header button {
+  display: flex;
+  align-items: center;
   font: inherit;
-  background-color: transparent;
+  background-color: rgb(255, 255, 198);
   border: 1px solid white;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
-  padding: 0.5rem 1.5rem;
+  padding: 1rem 1.5rem;
   border-radius: 6px;
   cursor: pointer;
   margin-right: 10px;
@@ -44,7 +51,4 @@
   background-color: #c291e2;
   text-transform: capitalize;
   color: #38015c;
-}
-.nav-link {
-  color: white;
 }
