--- a/src/components/chats/Chats.module.css
+++ b/src/components/chats/Chats.module.css
@@ -16,13 +16,15 @@
 }
 
 .form {
-  position: sticky;
+  /* position: absolute; */
+  /* width: 100%; */
   bottom: 0px;
   background-color: rgb(72, 185, 185);
 }
 .chat {
-  height: 80vh;
-  overflow: scroll;
+  height: inherit;
+  width: inherit;
+  overflow: auto;
 }
 
 .sent {
