--- a/src/components/worker/Worker.module.css
+++ b/src/components/worker/Worker.module.css
@@ -7,11 +7,13 @@
   height: 90vh;
   width: 90vw;
   overflow: scroll;
+  max-width: fit-content;
 }
 
 .x {
   display: flex;
   align-items: baseline;
+  max-width: 200px;
 }
 
 .pagination {
