--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-  color: #b5eaff;
+  color: #31708e;
 }
